	  LCD.  Reported by Toby Duckworth (2014-3-27).
	* arch/arm/include/sama5/chip.h and arch/arm/src/sama5/Kconfig:  Add
	  support for the SAMA5D36 (2014-3-28).
	* libc/strings/lib_strncpy.c:  Change ordering of test and copy.  Logic
	  would have failed if n=0; one byte was always copying before testing
	  for the end of the copy.
	* nuttx/configs/sama5d3-xplained/:  Add a board support configuration
	  for the Atmel SAMA5D3 Xplaiend board.  The initial check in is not
	  finished. For example, it still builds to run out of NOR FLASH but
	  the SAMA5D Xlpained has no NOR FLASH (2013-4-28).
	* arch/arm/src/sama5/sam_pmc.c and .h:  Add functions to calculate
	  PLLACK, PCK, and MCK frequencies given the main clock frequency
	  (2014-3-29).
	* configs/sama5d*/include/board.h, board_sdram.h, and other files:
	  When booting from SDRAM, we need to query the PMC registers (using
	  the functions in sam_pmc.c) to determine the MCK, PCK, etc.  We assume
	  that the MCK input clock is well known main crystal oscillator
	  frequency (2014-3-29).
	* configs/sama5d3x-ek:  Change all configuration names to board-
	  specific names so that this are no name collisions with other
	  boards that have similar configuration variables (2013-3-30).
	* configs/nuttx/compiler.h:  Add macro UNUSED() that can be used
	  to eliminate warnings about variables that are set to values
	  that are not used (2014-3-30).
	* arch/arm/src/sama5/sam_hsmci_clkciv.c:  Remove HSCMI-related
	  functions that did not belong in sam_pmc.c and give them their
	  own file (2014-3-30).
	* arch/arm/src/sama5/sam_boot.c:  Fix some backward conditional
	  compilation (2014-3-30).
	* libc/stdio/lib_sccanf.c:  Fix a counting error in the return
	  value from sscanf().  Noted by kfrolov.  Also, sscanf() should
	  return EOF if no values were converted (2014-3-30).
	* include/time.h and sched/clock_settime(): Add support for
	  CLOCK_REALTIME.  From Macs N (2014-3-31).
