@@ -17,7 +17,7 @@ nuttx/
   (6)  Binary loaders (binfmt/)
  (17)  Network (net/, drivers/net)
   (4)  USB (drivers/usbdev, drivers/usbhost)
- (11)  Libraries (libc/, )
+ (10)  Libraries (libc/, )
  (12)  File system/Generic drivers (fs/, drivers/)
   (5)  Graphics subystem (graphics/)
   (1)  Pascal add-on (pcode/)
@@ -1098,23 +1098,6 @@ o Libraries (libc/)
                The current getopt() implementation only supports #2.
   Status:      Open
   Priority:    Low
-
-  Title:       FERROR()
-  Description: ferror(), feof(), and clearerror() are present, but the
-               implementation of ferror() is limited.  There are flags in the
-               stream structure to indicate EOF and error conditions but nothing
-               in the code currently sets the error indication.  This is a
-               trivial change to many interfaces and has not yet been done.
-               Instead, for now, ferror() is equivalent to !feof().  If an
-               interface can failure because of an error or and EOF and you
-               only want to distinguish between an error and the EOF then
-               this ferror() will work.  However, if no error is reported then
-               this ferror() cannot tell you if an error has occurred or not.
-  Status:      Open
-  Priority:    Meidum to Low:  Some applications use ferror() and not the
-               return value to determine if an error occurred.  Those
-               applications will fail with this limited implementation of
-               ferror().
 
   Title:       CONCURRENT STREAM READ/WRITE
   Description: NuttX only supports a single file pointer so reads and writes
